# LionNotes

./: .gitignore  CLAUDE.md  create-issues.sh  plan.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
docs/: Commentary.md  LionVault.md  PRD.md  corner-cases-review.md  implementation-plan.md  kimbro-memory-architecture.md  phase-3-plan.md
original/: book.txt
src/lionnotes/: __init__.py  alias.py  cache.py  capture.py  cli.py  config.py  index.py  maps.py  mathlib_critical_path.py  obsidian.py  review.py  strategy.py  subjects.py  templates.py  vault.py
tests/: test_alias.py  test_cache.py  test_capture.py  test_cli.py  test_cli_phase2.py  test_cli_phase3.py  test_cli_phase4.py  test_config.py  test_doctor.py  test_index.py  test_init.py  test_maps.py  test_mathlib_critical_path.py  test_obsidian.py  test_review.py  test_strategy.py  test_subjects.py  test_subjects_advanced.py  test_templates.py  test_vault.py
