[project]
name = "lionnotes"
version = "0.1.0"
description = "Thought mapping tooling for Obsidian, based on Lion Kimbro's methodology"
readme = "docs/PRD.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer>=0.15",
    "mcp>=1.0",
    "tomli_w>=1.0",
]

[project.scripts]
lionnotes = "lionnotes.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lionnotes"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
